--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h3>Player 2:</h3>
 
           <div class="startPlay">
-            🎲
+            <div class="dice"><p>#</p></div>
             <button id="roll">Roll</button>
           </div>
         </div>
@@ -28,30 +28,30 @@
         <div class="gameBoard">
           <!-- the game grid. 5*5 to start in one corner and end kitty-corner -->
           <div class="div1">1</div>
-          <div class="div2"></div>
-          <div class="div3"></div>
-          <div class="div4"></div>
-          <div class="div5"></div>
-          <div class="div6"></div>
-          <div class="div7"></div>
-          <div class="div8"></div>
-          <div class="div9"></div>
-          <div class="div10"></div>
-          <div class="div11"></div>
-          <div class="div12"></div>
-          <div class="div13"></div>
-          <div class="div14"></div>
-          <div class="div15"></div>
-          <div class="div16"></div>
-          <div class="div17"></div>
-          <div class="div18"></div>
-          <div class="div19"></div>
-          <div class="div20"></div>
-          <div class="div21"></div>
-          <div class="div22"></div>
-          <div class="div23"></div>
-          <div class="div24"></div>
-          <div class="div25"></div>
+          <div class="div2">2</div>
+          <div class="div3">3</div>
+          <div class="div4">4</div>
+          <div class="div5">5</div>
+          <div class="div6">6</div>
+          <div class="div7">7</div>
+          <div class="div8">8</div>
+          <div class="div9">9</div>
+          <div class="div10">10</div>
+          <div class="div11">11</div>
+          <div class="div12">12</div>
+          <div class="div13">13</div>
+          <div class="div14">14</div>
+          <div class="div15">15</div>
+          <div class="div16">16</div>
+          <div class="div17">17</div>
+          <div class="div18">18</div>
+          <div class="div19">19</div>
+          <div class="div20">20</div>
+          <div class="div21">21</div>
+          <div class="div22">22</div>
+          <div class="div23">23</div>
+          <div class="div24">24</div>
+          <div class="div25">25</div>
         </div>
       </div>
     </div>
