function to generate random die #

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h3>Player 2:</h3>
 
           <div class="startPlay">
-            <div class="dice"><p>#</p></div>
+            <div class="dice"><p id="dice-face">⚫</p></div>
             <button id="roll">Roll</button>
           </div>
         </div>
