added snakes, working on ladders
image/css points to direct js to select in the grid

--- a/index.html
+++ b/index.html
@@ -27,29 +27,73 @@
 
         <div class="gameBoard">
           <!-- the game grid. 5*5 to start in one corner and end kitty-corner -->
+          <img src="./src/images/ladder.png" alt="ladder" id="ladder1" />
           <div class="div1">1</div>
           <div class="div2">2</div>
           <div class="div3">3</div>
           <div class="div4">4</div>
-          <div class="div5">5</div>
+          <div class="div5">
+            5
+            <img
+              src="./src/images/baby-snake.png"
+              alt="snake icon - green"
+              id="snake1"
+            />
+          </div>
+
           <div class="div6">6</div>
           <div class="div7">7</div>
           <div class="div8">8</div>
-          <div class="div9">9</div>
+          <div class="div9">
+            9<img
+              src="./src/images/rattlesnake.png"
+              alt="snake icon - orange"
+              id="snake2"
+            />
+          </div>
           <div class="div10">10</div>
-          <div class="div11">11</div>
+
+          <div class="div11">
+            11
+            <img
+              src="./src/images/snake.png"
+              alt="snake icon - striped"
+              id="snake3"
+            />
+          </div>
           <div class="div12">12</div>
           <div class="div13">13</div>
-          <div class="div14">14</div>
+          <div class="div14">
+            14
+            <img
+              src="./src/images/rattlesnake.png"
+              alt="snake icon - orange"
+              id="snake2"
+            />
+          </div>
           <div class="div15">15</div>
+
           <div class="div16">16</div>
           <div class="div17">17</div>
           <div class="div18">18</div>
-          <div class="div19">19</div>
+          <div class="div19">
+            19<img
+              src="./src/images/baby-snake.png"
+              alt="snake icon - green"
+              id="snake1"
+            />
+          </div>
           <div class="div20">20</div>
+
           <div class="div21">21</div>
           <div class="div22">22</div>
-          <div class="div23">23</div>
+          <div class="div23">
+            23<img
+              src="./src/images/snake.png"
+              alt="snake icon - striped"
+              id="snake3"
+            />
+          </div>
           <div class="div24">24</div>
           <div class="div25">25</div>
         </div>
