--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./src/styles.css" />
     <title>Nope Rope Game🐍🐍🐍</title>
   </head>
@@ -16,6 +22,15 @@
       <div class="playArea">
         <div class="playerInfo">
           <!-- player info - 1&2, dice roller -->
+          <h4>Pick Your Player:</h4>
+          <img src="./src/images/magician.png" alt="" id="player-avatar" />
+          <img
+            src="./src/images/black-cat.png"
+            alt=""
+            id="player-avatar"
+          />
+          <img src="./src/images/bow.png" alt="" id="player-avatar" />
+
           <h3>Player 1:</h3>
           <h3>Player 2:</h3>
 
@@ -27,21 +42,27 @@
 
         <div class="gameBoard">
           <!-- the game grid. 5*5 to start in one corner and end kitty-corner -->
-          <img src="./src/images/ladder.png" alt="ladder" id="ladder1" />
           <div class="div1">1</div>
           <div class="div2">2</div>
           <div class="div3">3</div>
-          <div class="div4">4</div>
-          <div class="div5">
-            5
+          <div class="div4">
+            4
+            <img
+              src="./src/images/red-ladder.png"
+              alt="another ladder"
+              id="ladder2"
+            />
+          </div>
+          <div class="div5">5</div>
+
+          <div class="div6">
+            6
             <img
               src="./src/images/baby-snake.png"
               alt="snake icon - green"
               id="snake1"
             />
           </div>
-
-          <div class="div6">6</div>
           <div class="div7">7</div>
           <div class="div8">8</div>
           <div class="div9">
@@ -51,7 +72,10 @@
               id="snake2"
             />
           </div>
-          <div class="div10">10</div>
+          <div class="div10">
+            10
+            <img src="./src/images/ladder.png" alt="ladder" id="ladder1" />
+          </div>
 
           <div class="div11">
             11
@@ -62,7 +86,10 @@
             />
           </div>
           <div class="div12">12</div>
-          <div class="div13">13</div>
+          <div class="div13">
+            13
+            <img src="./src/images/ladder.png" alt="ladder" id="ladder1" />
+          </div>
           <div class="div14">
             14
             <img
@@ -71,27 +98,50 @@
               id="snake2"
             />
           </div>
-          <div class="div15">15</div>
+          <div class="div15">
+            15
+            <img
+              src="./src/images/red-ladder.png"
+              alt="another ladder"
+              id="ladder2"
+            />
+          </div>
 
           <div class="div16">16</div>
           <div class="div17">17</div>
-          <div class="div18">18</div>
-          <div class="div19">
-            19<img
+          <div class="div18">
+            18
+            <img
               src="./src/images/baby-snake.png"
               alt="snake icon - green"
               id="snake1"
             />
           </div>
+          <div class="div19">
+            19
+            <img
+              src="./src/images/green-ladder.png"
+              alt="ladder"
+              id="ladder3"
+            />
+          </div>
           <div class="div20">20</div>
 
           <div class="div21">21</div>
-          <div class="div22">22</div>
-          <div class="div23">
-            23<img
+          <div class="div22">
+            22
+            <img
               src="./src/images/snake.png"
               alt="snake icon - striped"
               id="snake3"
+            />
+          </div>
+          <div class="div23">
+            23
+            <img
+              src="./src/images/green-ladder.png"
+              alt="ladder"
+              id="ladder3"
             />
           </div>
           <div class="div24">24</div>
