updated board, tried new js
still can't figure out how to move my player. I think this is closer...

--- a/index.html
+++ b/index.html
@@ -67,110 +67,63 @@
 
         <div class="gameBoard">
           <!-- the game grid. 5*5 to start in one corner and end kitty-corner -->
-          <div class="div1">1</div>
-          <div class="div2">2</div>
-          <div class="div3">3</div>
-          <div class="div4">
-            4
-            <img
-              src="./src/images/red-ladder.png"
-              alt="another ladder"
-              id="ladder2"
-            />
-          </div>
-          <div class="div5">5</div>
+          <div class="boardSpace" id="startLine">Start!</div>
+          <div class="boardSpace" id="div1">1</div>
+          <div class="boardSpace" id="div2">2</div>
+          <div class="boardSpace" id="div3">3</div>
+          <div class="boardSpace ladder" data-moveto="17" id="div4">4</div>
+          <div class="boardSpace" id="div5">5</div>
 
-          <div class="div6">
-            6
-            <img
-              src="./src/images/baby-snake.png"
-              alt="snake icon - green"
-              id="snake1"
-            />
-          </div>
-          <div class="div7">7</div>
-          <div class="div8">8</div>
-          <div class="div9">
-            9<img
-              src="./src/images/rattlesnake.png"
-              alt="snake icon - orange"
-              id="snake2"
-            />
-          </div>
-          <div class="div10">
-            10
-            <img src="./src/images/ladder.png" alt="ladder" id="ladder1" />
-          </div>
+          <div class="boardSpace" id="div6">6</div>
+          <div class="boardSpace" id="div7">7</div>
+          <div class="boardSpace" id="div8">8</div>
+          <div class="boardSpace" id="div9">9</div>
+          <div class="boardSpace" id="div10">10</div>
+          <div class="boardSpace" id="div11">11</div>
 
-          <div class="div11">
-            11
-            <img
-              src="./src/images/snake.png"
-              alt="snake icon - striped"
-              id="snake3"
-            />
-          </div>
-          <div class="div12">12</div>
-          <div class="div13">
-            13
-            <img src="./src/images/ladder.png" alt="ladder" id="ladder1" />
-          </div>
-          <div class="div14">
-            14
-            <img
-              src="./src/images/rattlesnake.png"
-              alt="snake icon - orange"
-              id="snake2"
-            />
-          </div>
-          <div class="div15">
-            15
-            <img
-              src="./src/images/red-ladder.png"
-              alt="another ladder"
-              id="ladder2"
-            />
-          </div>
+          <div class="boardSpace" id="div12">12</div>
+          <div class="boardSpace" id="div13">13</div>
+          <div class="boardSpace" id="div14">14</div>
+          <div class="boardSpace" id="div15">15</div>
+          <div class="boardSpace" id="div16">16</div>
+          <div class="boardSpace" id="div17">17</div>
 
-          <div class="div16">16</div>
-          <div class="div17">17</div>
-          <div class="div18">
-            18
-            <img
-              src="./src/images/baby-snake.png"
-              alt="snake icon - green"
-              id="snake1"
-            />
+          <div class="boardSpace" id="div18">18</div>
+          <div class="boardSpace" id="div19">19</div>
+          <div class="boardSpace snake" data-move-to="11" id="div20">
+            20
           </div>
-          <div class="div19">
-            19
-            <img
-              src="./src/images/green-ladder.png"
-              alt="ladder"
-              id="ladder3"
-            />
-          </div>
-          <div class="div20">20</div>
+          <div class="boardSpace" id="div21">21</div>
+          <div class="boardSpace" id="div22">22</div>
+          <div class="boardSpace" id="div23">23</div>
 
-          <div class="div21">21</div>
-          <div class="div22">
-            22
-            <img
-              src="./src/images/snake.png"
-              alt="snake icon - striped"
-              id="snake3"
-            />
-          </div>
-          <div class="div23">
-            23
-            <img
-              src="./src/images/green-ladder.png"
-              alt="ladder"
-              id="ladder3"
-            />
-          </div>
-          <div class="div24">24</div>
-          <div class="div25">25</div>
+          <div class="boardSpace" id="div24">24</div>
+          <div class="boardSpace" id="div25">25</div>
+          <div class="boardSpace" id="div26">26</div>
+          <div class="boardSpace" id="div27">27</div>
+          <div class="boardSpace" id="div28">28</div>
+          <div class="boardSpace" id="div29">29</div>
+          <div class="boardSpace" id="div30">30</div>
+
+          <div class="boardSpace" id="div31">31</div>
+          <div class="boardSpace" id="div32">32</div>
+          <div class="boardSpace" id="div33">33</div>
+          <div class="boardSpace" id="div34">34</div>
+          <div class="boardSpace" id="div35">35</div>
+          <div class="boardSpace" id="div36">36</div>
+
+          <div class="boardSpace" id="div37">37</div>
+          <div class="boardSpace" id="div38">38</div>
+          <div class="boardSpace" id="div39">39</div>
+          <div class="boardSpace" id="div40">40</div>
+          <div class="boardSpace" id="div41">41</div>
+          <div class="boardSpace" id="div42">42</div>
+          <div class="boardSpace" id="div43">43</div>
+          <div class="boardSpace" id="div44">44</div>
+          <div class="boardSpace" id="div45">45</div>
+          <div class="boardSpace" id="div46">46</div>
+          <div class="boardSpace" id="div47">47</div>
+          <div class="boardSpace" id="div48">48</div>
         </div>
       </div>
     </div>
