--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
         <div id="gameBoard">
           <div class="Player1">
             <h4>Player 1:</h4>
-            <span id="name1"></span>
+            <div id="name1"></div>
             <div id="avatar1"></div>
+            <div class="scoreboard">
+              <span id="win">Wins:</span><span id="win1res"></span><br />
+              <span id="lose">Lose:</span><span id="lose1res"></span><br />
+              <span id="tie">Ties:</span><span id="tie1res"></span><br />
+            </div>
           </div>
 
           <div class="startPlay">
@@ -72,6 +77,11 @@
             <h4>Player 2:</h4>
             <span id="name2"></span>
             <div id="avatar2"></div>
+            <div class="scoreboard">
+              <span id="win">Wins:</span><span id="win1res"></span><br />
+              <span id="lose">Lose:</span><span id="lose1res"></span><br />
+              <span id="tie">Ties:</span><span id="tie1res"></span><br />
+            </div>
           </div>
         </div>
       </div>
