--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 
           <div class="Player2">
             <h4>Player 2:</h4>
-            <span id="name2"></span>
+            <div id="name2"></div>
             <div id="avatar2"></div>
             <div class="scoreboard">
-              <span id="win">Wins:</span><span id="win1res"></span><br />
-              <span id="lose">Lose:</span><span id="lose1res"></span><br />
-              <span id="tie">Ties:</span><span id="tie1res"></span><br />
+              <span id="win">Wins:</span><span id="win2res"></span><br />
+              <span id="lose">Lose:</span><span id="lose2res"></span><br />
+              <span id="tie">Ties:</span><span id="tie2res"></span><br />
             </div>
           </div>
         </div>
